--- a/src/Modules/Tours/Explorer.Tours.Infrastructure/Explorer.Tours.Infrastructure.csproj
+++ b/src/Modules/Tours/Explorer.Tours.Infrastructure/Explorer.Tours.Infrastructure.csproj
@@ -15,4 +15,8 @@
     <Folder Include="Database\Repositories\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.9" />
+  </ItemGroup>
+
 </Project>
