--- a/src/BuildingBlocks/Explorer.BuildingBlocks.Core/Explorer.BuildingBlocks.Core.csproj
+++ b/src/BuildingBlocks/Explorer.BuildingBlocks.Core/Explorer.BuildingBlocks.Core.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FluentResults" Version="3.15.2" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.1" />
   </ItemGroup>
 
 </Project>
