--- a/src/Explorer.Architecture.Tests/Explorer.Architecture.Tests.csproj
+++ b/src/Explorer.Architecture.Tests/Explorer.Architecture.Tests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
     <PackageReference Include="Shouldly" Version="4.2.1" />
     <PackageReference Include="TngTech.ArchUnitNET" Version="0.10.6" />
