--- a/src/Modules/Blog/Explorer.Blog.API/Explorer.Blog.API.csproj
+++ b/src/Modules/Blog/Explorer.Blog.API/Explorer.Blog.API.csproj
@@ -16,4 +16,8 @@
     <Folder Include="Public\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.1" />
+  </ItemGroup>
+
 </Project>
