--- a/src/Modules/Blog/Explorer.Blog.Core/Explorer.Blog.Core.csproj
+++ b/src/Modules/Blog/Explorer.Blog.Core/Explorer.Blog.Core.csproj
@@ -15,4 +15,8 @@
     <Folder Include="UseCases\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.1" />
+  </ItemGroup>
+
 </Project>
