--- a/src/Modules/Blog/Explorer.Blog.Infrastructure/Explorer.Blog.Infrastructure.csproj
+++ b/src/Modules/Blog/Explorer.Blog.Infrastructure/Explorer.Blog.Infrastructure.csproj
@@ -15,4 +15,8 @@
     <Folder Include="Database\Repositories\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.1" />
+  </ItemGroup>
+
 </Project>
