--- a/src/Modules/Stakeholders/Explorer.Stakeholders.API/Explorer.Stakeholders.API.csproj
+++ b/src/Modules/Stakeholders/Explorer.Stakeholders.API/Explorer.Stakeholders.API.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Internal\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.1" />
+  </ItemGroup>
+
 </Project>
