--- a/src/Modules/Stakeholders/Explorer.Stakeholders.Core/Explorer.Stakeholders.Core.csproj
+++ b/src/Modules/Stakeholders/Explorer.Stakeholders.Core/Explorer.Stakeholders.Core.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Explorer.Stakeholders.API\Explorer.Stakeholders.API.csproj" />
   </ItemGroup>
 
