--- a/src/Modules/Stakeholders/Explorer.Stakeholders.Infrastructure/Explorer.Stakeholders.Infrastructure.csproj
+++ b/src/Modules/Stakeholders/Explorer.Stakeholders.Infrastructure/Explorer.Stakeholders.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.1" />
   </ItemGroup>
 
   <ItemGroup>
