--- a/src/Modules/Tours/Explorer.Tours.API/Explorer.Tours.API.csproj
+++ b/src/Modules/Tours/Explorer.Tours.API/Explorer.Tours.API.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Internal\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.1" />
+  </ItemGroup>
+
 </Project>
