--- a/src/Modules/Tours/Explorer.Tours.Infrastructure/Explorer.Tours.Infrastructure.csproj
+++ b/src/Modules/Tours/Explorer.Tours.Infrastructure/Explorer.Tours.Infrastructure.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.1" />
   </ItemGroup>
 
 </Project>
