feat: Tour Review functionality

--- a/src/Explorer.API/appsettings.json
+++ b/src/Explorer.API/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "EmailSettings": {
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SmtpUsername": "grooyabeats@gmail.com",
+    "SmtpPassword": "xklt rnat gaga ksnm",
+    "FromEmail": "grooyabeats@gmail.com",
+    "FromName": "Explorer Tours",
+    "EnableRealEmailSending": true,
+    "AllowedTestEmail": "krazykeny1@gmail.com"
+  }
 }
