--- a/src/Modules/Stakeholders/Explorer.Stakeholders.Core/Explorer.Stakeholders.Core.csproj
+++ b/src/Modules/Stakeholders/Explorer.Stakeholders.Core/Explorer.Stakeholders.Core.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.1" />
   </ItemGroup>
 
   <ItemGroup>
